# viztracer

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  CITATION.cff  LICENSE  MANIFEST.in  Makefile  NOTICE.txt  README.md  _test_something.py  install.py  pyproject.toml  requirements-dev-t.txt  requirements-dev.txt  result.json  setup.py
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: coverage-upload.yml  docs.yml  documentation-links.yml  lint.yml  python-package.yml  release.yml  wheels.yml
codesnap/: __init__.py  __main__.py  codesnap.py  htmlconverter.py  snaptree.py  tracer.py
codesnap/html/: control.js  style.css
docs/: Makefile  make.bat  requirements.txt
docs/source/: advanced_usage.rst  basic_usage.rst  concurrency.rst  conf.py  contact.rst  custom_event.rst  custom_event_intro.rst  decorator.rst  extra_log.rst  filter.rst  global_tracer.rst  index.rst  installation.rst  license.rst  limitations.rst  multi_process.rst  multi_thread_process.rst  plugins.rst  remote_attach.rst  sponsor.rst  virtual_debug.rst  viz_plugin.rst  viztracer.rst
example/: generate_examples.py  requirements.txt
example/json/: async_simple.json  different_sorts.json  function_args_return.json  gradient_descent.json  logging_integration.json  multi_process_pool.json  multithread.json
example/src/: async_simple.py  different_sorts.py  function_args_return.py  gradient_descent.py  logging_integration.py  mcts_game.py  multi_process_pool.py  multithread.py
example_json/: arbitrary_function_arguments.json  different_sorts.json  fib_stack_print.json  gradient_descent.json  log_return_value.json  logging.json  modulo.json  multithread.json
src/codesnap/: __main__.py  codesnap.py  htmlconverter.py  snaptree.py  tracer.py
src/viztracer/: __init__.py  __main__.py  attach.py  cellmagic.py  code_monkey.py  counter.py  decorator.py  event_base.py  flamegraph.py  functree.py  json.py  logobject.py  main.py  patch.py  prog_snapshot.py  report_builder.py  report_server.py  simulator.py  snaptrace.pyi  tracer.py  util.py  vcompressor.pyi  viewer.py  vizcounter.py  vizevent.py  vizlogging.py  vizobject.py  vizplugin.py  vizshield.py  viztracer.py
tests/: __init__.py  base_tmpl.py  cmdline_tmpl.py  mytest.py  package_env.py  test_basic.py  test_cmdline.py  test_codemonkey.py  test_counter.py  test_daemon_process.py  test_escape_string.py  test_fastlog.py  test_flamegraph.py  test_functree.py  test_invalid.py  test_jupyter.py  test_logging.py  test_logobject.py  test_logsparse.py  test_multiprocess.py  test_multithread.py  test_patch.py  test_performance.py  test_prog_snapshot.py  test_regression.py  test_remote.py  test_report_builder.py  test_report_server.py  test_simulator.py  test_torch.py  test_tracer.py  test_util.py  test_vcompressor.py  test_viewer.py  test_vizcounter.py  test_vizevent.py  test_vizobject.py  test_vizplugin.py  util.py
tests/archived/: _test_prog_snapshot.py  _test_simulator.py
tests/data/: fib  fib.json  fib.py  old.json  (+5 more)
(+133 files in other folders)
